# brain-to-text-eeg

./: .gitignore  README.md  brain_to_text_analysis.py
Lab1/DM2025Labs/: main.py  pyproject.toml
midterm/: competition_summary.md  download_and_analyze.py  progress_report_guide.md  requirements.txt  run_analysis.py
midterm/scripts/: brain_to_text_analysis.py  progress_report_analysis.py  setup_kaggle.py
